[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["翁林 <1649380659@qq.com>"]
readme = "README.md"
packages = [{include = "back_end"}]

[tool.poetry.dependencies]
python = "^3.9"
beanie = "^1.17.0"
fastapi = "^0.93.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
